samples/_failures_safe/1761432345_a1e55c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f895157c.c: In function ‘main’:
./samples/SAFE/__tmp_f895157c.c:144:18: error: ‘matrix’ undeclared (first use in this function); did you mean ‘matrix2’?
  144 |             if (!matrix
      |                  ^~~~~~
      |                  matrix2
./samples/SAFE/__tmp_f895157c.c:144:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f895157c.c:144:24: error: expected ‘)’ at end of input
  144 |             if (!matrix
      |                ~       ^
      |                        )
./samples/SAFE/__tmp_f895157c.c:144:13: error: expected declaration or statement at end of input
  144 |             if (!matrix
      |             ^~
./samples/SAFE/__tmp_f895157c.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f895157c.c:144:13: error: expected declaration or statement at end of input
